# aibo

./: .dockerignore  Dockerfile  README.md  bot.py  config.example.py  launcher.py  pyproject.toml
assets/images/accounts/: LICENSE
cogs/: accounts.py  anilist.py  ctx_menus.py  gameboy.py
helpers/: constants.py  deco.py  fmt.py  logging.py  postgres.py  sentry.py  tree.py
helpers/imagemanip/: accounts.py  common.py
helpers/models/: account.py
helpers/views/: gameboy.py  pagination.py
schema/: accounts.sql
